services/grafana/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    dns.yhzone.top/managed: 'true'
    external-dns.kubernetes.io/target: 10.1.2.4
    external-dns.kubernetes.io/ttl: '300'
    external-dns.kubernetes.io/cloudflare-proxied: 'false'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - grafana.k8s.yhzone.top
    secretName: grafana-ingress-tls
  rules:
  - host: grafana.k8s.yhzone.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
